src/test/ui/error-codes/E0303.stderr
error[E0009]: cannot bind by-move and by-ref in the same pattern
  --> $DIR/E0303.rs:3:34
   |
LL |         ref op_string_ref @ Some(s) => {},
   |         -------------------------^-
   |         |                        |
   |         |                        by-move pattern here
   |         both by-ref and by-move used

error[E0303]: pattern bindings are not allowed after an `@`
  --> $DIR/E0303.rs:3:34
   |
LL |         ref op_string_ref @ Some(s) => {},
   |                                  ^ not allowed after `@`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0009, E0303.
For more information about an error, try `rustc --explain E0009`.
